src/test/resources/dev/kobu/integration/interpreter/out/ModulesErr.out
ERROR: 'myFunction' is already defined

File: src/modules/SubModule1.kobu
5:4
  fun myFunction(): void {
      ^^^^^^^^^^
File: src/modules/SubModule2.kobu
5:4
  fun myFunction(): void {
      ^^^^^^^^^^

ERROR: src/ModulesErr.kobu
 11:4 'myPrivateFunction' is not defined
  myPrivateFunction()
  ^^^^^^^^^^^^^^^^^^^

